@@ -17,7 +17,7 @@ is( $t->uri, START, 'Got Google' );
 like( $t->title, qr/Google/ );
 
 my $form_number_1 = $t->form_number(1);
-ok( $form_number_1, "Can select the first form");
+isa_ok( $form_number_1, 'HTML::Form', "Can select the first form");
 is( $t->current_form(), $t->{forms}->[0], "Set the form attribute" );
 
 ok( !$t->form(99), "Can't select the 99th form");
@@ -25,14 +25,14 @@ is( $t->current_form(), $t->{forms}->[0], "Form is still set to 1" );
 
 
 my $form_name_f = $t->form_name('f');
-ok( $form_name_f, "Can select the form" );
+isa_ok( $form_name_f, 'HTML::Form', "Can select the form" );
 ok( !$t->form('bargle-snark'), "Can't select non-existent form" );
 
 # Make sure form() handles numbers vs. non-numbers correctly
 my $form_1 = $t->form(1);
-ok( $form_1 );
+isa_ok( $form_1, 'HTML::Form' );
 is( $form_1, $form_number_1 );
 
 my $form_f = $t->form('f');
-ok( $form_f );
+isa_ok( $form_f, 'HTML::Form' );
 is( $form_f, $form_name_f );
