@@ -1,4 +1,4 @@
-# $Id: Changes,v 1.51 2003/08/13 14:37:21 petdance Exp $
+# $Id: Changes,v 1.52 2003/08/13 18:31:00 petdance Exp $
 Revision history for Perl extension WWW::Mechanize
 
 0.58
@@ -8,11 +8,18 @@ Revision history for Perl extension WWW::Mechanize
 	  causing problems on Win32 and/or threaded Perls, and I
 	  didn't feel like figuring out why.  If the non-objectness
 	  of the uri() method is a problem, let me know.
+	* form(), form_name() and form_number() now return the
+	  HTML::Form object of the form that was chosen.  They used
+	  to return a 1 or 0.  This means that if you're explicitly
+	  checking for 1 or 0, instead of evaluating the return
+	  code in a boolean context, your code will break.
 
 	[FIXES]
 	* The <AREA>-handling in extract_links() was incorrectly
 	  building the text.
 	* uri() now returns a string, not a URI object.
+	* form(), form_name() and form_number() now return the
+	  HTML::Form object of the form that was chosen.
 
 	[INTERNALS]
 	* Determination of live vs. local tests is now done in
